--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,21 @@
 /* latin-ext */
+
+@font-face {
+  font-family: 'Palatino Linotype';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Palatino Linotype'), local('Palatino-Linotype'), url(https://fonts.gstatic.com/s/palatinolinotype/v8/9oRPNYsQpS4zYfjv2aG9sQ.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+@font-face {
+  font-family: 'Palatino Linotype';
+  font-style: bold;
+  font-weight: 400;
+  src: local('Palatino Linotype'), local('Palatino-Linotype'), url(https://fonts.gstatic.com/s/palatinolinotype/v8/9oRPNYsQpS4zYfjv2aG9sQ.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
 @font-face {
   font-family: 'Lato';
   font-style: italic;
